--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="styles/css.css" />
+		<link rel="stylesheet" type="text/css" href="css.css" />
 		<meta name="keywords" content="易达亿商官网,溯源电商,科技,服务商,技术集成商" />
 		<meta name="description" content="北京易达亿商科技有限公司（yidayishang.com/）旗下网站有溯源平台,溯源电商,汽车销售平台,数据中心,农行车易购,中石化电子贷架,满洲里综合服务平台,满洲里公共
 服务平台,绥芬河公共服务平台。是系多元化IT系统服务商和综合技术集成商" />
